--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.0-canary.51",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "eslint": "8.49.0",
